Add older posts

--- a/components/shared/jekyll/pagination.jekyll.html
+++ b/components/shared/jekyll/pagination.jekyll.html
@@ -14,7 +14,7 @@
         </div>
 
         {% capture next_text %}Next <i class="ion ion-ios-arrow-forward"></i>{% endcapture %}
-        <a data-pagebreak-control="next" href="." class="pagination__next">{{next_text}}</a>
+        <a data-pagebreak-control="next" href="" class="pagination__next">{{next_text}}</a>
         <span data-pagebreak-control="!next" class="pagination__next disabled">{{next_text}}</span>
       </div>
 
