Add Mastodon as a social icon

--- a/components/shared/styles/4-layouts/_page-layout.scss
+++ b/components/shared/styles/4-layouts/_page-layout.scss
@@ -241,7 +241,7 @@
 		color: $background-color-alt;
 		box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.07);
 
-		&.share__facebook,
+		&.share__mastodon,
 		&.share__twitter,
 		&.share__linkedin,
 		&.share__pinterest {
@@ -251,8 +251,8 @@
 				color: $white;
 			}
 		}
-		&.share__facebook {
-			color: #3b5998;
+		&.share__mastodon {
+			color: #7600bc;
 			&:hover {
 				background: #3b5998;
 			}
